--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,21 +1,32 @@
 {
   "name": "OpenAPIGenerator",
-  "dockerComposeFile": "compose.yml",
-
-  // The 'service' property is the name of the service for the container that VS Code should
-  // use. Update this value and .devcontainer/docker-compose.yml to the real service name.
-  "service": "app",
-
-  // The 'workspaceFolder' property is the path VS Code should open by default when
-  // connected. Corresponds to a volume mount in .devcontainer/docker-compose.yml
-  "workspaceFolder": "/workspace",
-
+  "image": "mcr.microsoft.com/devcontainers/base:debian",
+  "features": {
+    "ghcr.io/devcontainers/features/java:1": {
+      "version": "11",
+      "installMaven": true
+    },
+    "ghcr.io/devcontainers/features/node:1": {
+      "version": "lts"
+    },
+    "ghcr.io/snebjorn/devcontainer-feature/chromium:latest": {}
+  },
   // Configure tool-specific properties.
   "customizations": {
     // Configure properties specific to VS Code.
     "vscode": {
       // Set *default* container specific settings.json values on container create.
-      "settings": {},
+      "settings": {
+        "java.configuration.runtimes": [
+          {
+            "name": "JavaSE-11",
+            "path": "/usr/local/sdkman/candidates/java/11.0.16.1-ms",
+            "sources": "/usr/local/sdkman/candidates/java/11.0.16.1-ms/lib/src.zip",
+            "javadoc": "https://docs.oracle.com/en/java/javase/11/docs/api",
+            "default": true
+          }
+        ]
+      },
       // Add the IDs of extensions you want installed when the container is created.
       "extensions": [
         "vscjava.vscode-java-pack",
@@ -27,13 +38,10 @@
       ]
     }
   },
-
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
-  "forwardPorts": [8080],
-
+  // "forwardPorts": [],
   // Use 'postCreateCommand' to run commands after the container is created.
-  "postCreateCommand": "mvn clean package -DskipTests",
-
+  // "postCreateCommand": "mvn clean package -DskipTests",
   // Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
   "remoteUser": "vscode"
 }
