--- a/.github/workflows/misc-test.yaml
+++ b/.github/workflows/misc-test.yaml
@@ -16,6 +16,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
+      - uses: actions/setup-ruby@v1
+        with:
+          ruby-version: '2.6'
       - name: Detect tabs
         run: /bin/bash ./bin/utils/detect_tab_in_templates.sh
       - name: Detect changes in test files
