--- a/.github/workflows/misc-test.yaml
+++ b/.github/workflows/misc-test.yaml
@@ -22,6 +22,8 @@ jobs:
         with:
           ruby-version: '2.6'
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+      - name: bundle install
+        run: bundle install --gemfile ./bin/utils/Gemfile
       - name: Detect tabs
         run: /bin/bash ./bin/utils/detect_tab_in_templates.sh
       - name: Detect changes in test files
