--- a/.github/workflows/misc-test.yaml
+++ b/.github/workflows/misc-test.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Detect tabs
         run: /bin/bash ./bin/utils/detect_tab_in_templates.sh
       - name: Detect changes in test files
-        run: /bin/bash ./bin/utils/detect_test_file_changes.rb bin/utils/test_file_list.yaml
+        run: ./bin/utils/detect_test_file_changes.rb bin/utils/test_file_list.yaml
       - name: Detect carriage return
         run: /bin/bash ./bin/utils/detect_carriage_return.sh
       - name: Detect merge conflicts
