--- a/website/src/dynamic/sponsors.yml
+++ b/website/src/dynamic/sponsors.yml
@@ -55,6 +55,6 @@
   bronze: true
 -
   caption: "Bürkert"
-  image: "img/companies/burkert.gif"
+  image: "img/companies/burkert.jpg"
   infoLink: "https://www.burkert.com/?utm_source=openapi_generator&utm_medium=official_website&utm_campaign=sponsor"
   bronze: true
