--- a/.github/workflows/samples-go.yaml
+++ b/.github/workflows/samples-go.yaml
@@ -25,7 +25,9 @@ jobs:
       - run: go version
       - name: Install
         working-directory: ${{ matrix.sample }}
-        run: go get github.com/labstack/echo/v4@v4.9.0
+        run: |
+          go get github.com/labstack/echo/v4/middleware@v4.9.0
+          go get github.com/labstack/echo/v4@v4.9.0
       - name: Build
         working-directory: ${{ matrix.sample }}
         run: go test -v
