test go api server

--- a/.github/workflows/samples-go.yaml
+++ b/.github/workflows/samples-go.yaml
@@ -4,9 +4,11 @@ on:
   push:
     paths:
       - 'samples/server/petstore/go-echo-server/**'
+      - 'samples/server/petstore/go-api-server/**'
   pull_request:
     paths:
       - 'samples/server/petstore/go-echo-server/**'
+      - 'samples/server/petstore/go-api-server/**'
 
 jobs:
   build:
