test go gin in github workflow

--- a/.github/workflows/samples-go.yaml
+++ b/.github/workflows/samples-go.yaml
@@ -5,10 +5,12 @@ on:
     paths:
       - 'samples/server/petstore/go-echo-server/**'
       - 'samples/server/petstore/go-api-server/**'
+      - 'samples/server/petstore/go-gin-api-server/**'
   pull_request:
     paths:
       - 'samples/server/petstore/go-echo-server/**'
       - 'samples/server/petstore/go-api-server/**'
+      - 'samples/server/petstore/go-gin-api-server/**'
 
 jobs:
   build:
@@ -20,6 +22,7 @@ jobs:
         sample:
           - samples/server/petstore/go-echo-server/
           - samples/server/petstore/go-api-server/
+          - samples/server/petstore/go-gin-api-server/
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
