--- a/.github/workflows/samples-go.yaml
+++ b/.github/workflows/samples-go.yaml
@@ -32,8 +32,8 @@ jobs:
       - name: Install
         working-directory: ${{ matrix.sample }}
         run: |
-          go get github.com/labstack/echo/v4/middleware@v4.9.0
-          go get github.com/labstack/echo/v4@v4.9.0
+          go install github.com/labstack/echo/v4/middleware@v4.9.0
+          go install github.com/labstack/echo/v4@v4.9.0
       - name: Build
         working-directory: ${{ matrix.sample }}
         run: go test -v
