--- a/.github/workflows/helidon-functional-tests.yaml
+++ b/.github/workflows/helidon-functional-tests.yaml
@@ -1,4 +1,4 @@
-name: Functional tests
+name: Helidon Functional tests
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - modules/openapi-generator/src/test/java/org/openapitools/codegen/java/helidon/**
 
   functional-test:
-    name: Functional tests
+    name: Helidon Functional tests
     runs-on: ubuntu-latest
     needs:
       - build
