--- a/samples/server/petstore/jaxrs-spec/pom.xml
+++ b/samples/server/petstore/jaxrs-spec/pom.xml
@@ -74,9 +74,9 @@
       <version>${joda-version}</version>
     </dependency>
     <dependency>
-      <groupId>javax.annotation</groupId>
-      <artifactId>javax.annotation-api</artifactId>
-      <version>${javax.annotation-api-version}</version>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+      <version>${jakarta.annotation-api-version}</version>
     </dependency>
     <dependency>
       <groupId>io.swagger</groupId>
@@ -133,7 +133,8 @@
     <junit-version>4.13.2</junit-version>
     <joda-version>2.10.13</joda-version>
     <javax.annotation-api-version>1.3.2</javax.annotation-api-version>
-    <beanvalidation-version>2.0.2</beanvalidation-version>
-    <jakarta.ws.rs-version>2.1.6</jakarta.ws.rs-version>
+    <jakarta.annotation-api-version>2.1.1</jakarta.annotation-api-version>
+    <beanvalidation-version>3.0.2</beanvalidation-version>
+    <jakarta.ws.rs-version>3.1.0</jakarta.ws.rs-version>
   </properties>
 </project>
