Add single inheritance aliases for path parameters and return types

--- a/modules/openapi-generator/src/test/resources/3_0/anyOf-allOf-oneOf-single-inheritance-alias.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/anyOf-allOf-oneOf-single-inheritance-alias.yaml
@@ -4,21 +4,22 @@ info:
   version: 1.0.0
   description: todo
 paths:
-  /entity:
+  /aliasedParameterAndReturnType:
     description: Query for Entity
     get:
       parameters:
         - name: id
           in: path
           schema:
-            allOf:
+            anyOf:
               - $ref: '#/components/schemas/IdReference'
       responses:
         '200':
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/EntityWithId'
+                anyOf:
+                  - $ref: '#/components/schemas/IdReference'
           description: Entity
 components:
   schemas:
