--- a/samples/openapi3/client/petstore/python-nextgen/tox.ini
+++ b/samples/openapi3/client/petstore/python-nextgen/tox.ini
@@ -6,4 +6,4 @@ deps=-r{toxinidir}/requirements.txt
      -r{toxinidir}/test-requirements.txt
 
 commands=
-   pytest --cov=petstore_api
+   pytest --cov=petstore_api tests/test_pet_model.py
