update alamofire sample to use new flag

--- a/bin/configs/swift5-alamofireLibrary.yaml
+++ b/bin/configs/swift5-alamofireLibrary.yaml
@@ -5,6 +5,7 @@ inputSpec: modules/openapi-generator/src/test/resources/2_0/swift/petstore-with-
 templateDir: modules/openapi-generator/src/main/resources/swift5
 generateAliasAsModel: true
 useCustomDateWithoutTime: true
+returnDataInsteadOfVoid: true
 additionalProperties:
   podAuthors: ""
   podSummary: PetstoreClient
