--- a/modules/openapi-generator/src/test/resources/3_0/python/petstore-with-fake-endpoints-models-for-testing.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/python/petstore-with-fake-endpoints-models-for-testing.yaml
@@ -1571,43 +1571,43 @@ components:
     #    - _abc
     #    - '-efg'
     #    - (xyz)
-    #Enum_Test:
-    #  type: object
-    #  required:
-    #    - enum_string_required
-    #  properties:
-    #    enum_string:
-    #      type: string
-    #      enum:
-    #        - UPPER
-    #        - lower
-    #        - ''
-    #    enum_string_required:
-    #      type: string
-    #      enum:
-    #        - UPPER
-    #        - lower
-    #        - ''
-    #    enum_integer:
-    #      type: integer
-    #      format: int32
-    #      enum:
-    #        - 1
-    #        - -1
-    #    enum_number:
-    #      type: number
-    #      format: double
-    #      enum:
-    #        - 1.1
-    #        - -1.2
-    #    outerEnum:
-    #      $ref: '#/components/schemas/OuterEnum'
-    #    outerEnumInteger:
-    #      $ref: '#/components/schemas/OuterEnumInteger'
-    #    outerEnumDefaultValue:
-    #      $ref: '#/components/schemas/OuterEnumDefaultValue'
-    #    outerEnumIntegerDefaultValue:
-    #      $ref: '#/components/schemas/OuterEnumIntegerDefaultValue'
+    Enum_Test:
+      type: object
+      required:
+        - enum_string_required
+      properties:
+        enum_string:
+          type: string
+          enum:
+            - UPPER
+            - lower
+            - ''
+        enum_string_required:
+          type: string
+          enum:
+            - UPPER
+            - lower
+            - ''
+        enum_integer:
+          type: integer
+          format: int32
+          enum:
+            - 1
+            - -1
+        enum_number:
+          type: number
+          format: double
+          enum:
+            - 1.1
+            - -1.2
+        outerEnum:
+          $ref: '#/components/schemas/OuterEnum'
+        outerEnumInteger:
+          $ref: '#/components/schemas/OuterEnumInteger'
+        outerEnumDefaultValue:
+          $ref: '#/components/schemas/OuterEnumDefaultValue'
+        outerEnumIntegerDefaultValue:
+          $ref: '#/components/schemas/OuterEnumIntegerDefaultValue'
     AdditionalPropertiesClass:
       type: object
       properties:
@@ -1758,27 +1758,27 @@ components:
     #        enum:
     #          - fish
     #          - crab
-    #OuterEnum:
-    #  nullable: true
-    #  type: string
-    #  enum:
-    #    - placed
-    #    - approved
-    #    - delivered
-    #OuterEnumInteger:
-    #  type: integer
-    #  enum:
-    #  - 0
-    #  - 1
-    #  - 2
-    #  example: 2
-    #OuterEnumDefaultValue:
-    #  type: string
-    #  enum:
-    #  - placed
-    #  - approved
-    #  - delivered
-    #  default: placed
+    OuterEnum:
+      nullable: true
+      type: string
+      enum:
+        - placed
+        - approved
+        - delivered
+    OuterEnumInteger:
+      type: integer
+      enum:
+      - 0
+      - 1
+      - 2
+      example: 2
+    OuterEnumDefaultValue:
+      type: string
+      enum:
+      - placed
+      - approved
+      - delivered
+      default: placed
     OuterEnumIntegerDefaultValue:
       type: integer
       enum:
