--- a/modules/openapi-generator/src/test/resources/3_0/python/petstore-with-fake-endpoints-models-for-testing.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/python/petstore-with-fake-endpoints-models-for-testing.yaml
@@ -872,26 +872,26 @@ paths:
             schema:
               $ref: '#/components/schemas/OuterNumber'
         description: Input number as post body
-  #/fake/property/enum-int:
-  #  post:
-  #    tags:
-  #      - fake
-  #    description: Test serialization of enum (int) properties with examples
-  #    operationId: fakePropertyEnumIntegerSerialize
-  #    responses:
-  #      '200':
-  #        description: Output enum (int)
-  #        content:
-  #          '*/*':
-  #            schema:
-  #              $ref: '#/components/schemas/OuterObjectWithEnumProperty'
-  #    requestBody:
-  #      required: true
-  #      content:
-  #        application/json:
-  #          schema:
-  #            $ref: '#/components/schemas/OuterObjectWithEnumProperty'
-  #      description: Input enum (int) as post body
+  /fake/property/enum-int:
+    post:
+      tags:
+        - fake
+      description: Test serialization of enum (int) properties with examples
+      operationId: fakePropertyEnumIntegerSerialize
+      responses:
+        '200':
+          description: Output enum (int)
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/OuterObjectWithEnumProperty'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/OuterObjectWithEnumProperty'
+        description: Input enum (int) as post body
   /fake/outer/string:
     post:
       tags:
