--- a/modules/openapi-generator-gradle-plugin/build.gradle
+++ b/modules/openapi-generator-gradle-plugin/build.gradle
@@ -1,83 +1,55 @@
-buildscript {
-    ext.kotlin_version = '1.3.30'
-    repositories {
-        mavenLocal()
-        maven { url "https://repo1.maven.org/maven2" }
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-        maven {
-            url "https://oss.sonatype.org/content/repositories/releases/"
-        }
-        maven {
-            url "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "gradle.plugin.org.gradle.kotlin:gradle-kotlin-dsl-plugins:1.1.3"
-        classpath "com.gradle.publish:plugin-publish-plugin:0.11.0"
-        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.20.0"
-        classpath "de.marcphilipp.gradle:nexus-publish-plugin:0.2.0"
-    }
+import io.github.gradlenexus.publishplugin.CloseNexusStagingRepository
+import io.github.gradlenexus.publishplugin.ReleaseNexusStagingRepository
+
+plugins {
+    id("com.gradle.plugin-publish") version "1.0.0"
+    id("io.github.gradle-nexus.publish-plugin") version "1.1.0"
+    id("java-gradle-plugin")
+    id("maven-publish")
+    id("org.gradle.kotlin.kotlin-dsl") version "2.3.3"
+    id("org.jetbrains.kotlin.jvm") version "1.6.21"
+    id("signing")
 }
 
-group 'org.openapitools'
-// Shared OpenAPI Generator version be passed via command line arg as -PopenApiGeneratorVersion=VERSION
-version "$openApiGeneratorVersion"
+group = "org.openapitools"
+version = "$openApiGeneratorVersion"
+ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
+
 description = """
-This plugin supports common functionality found in Open API Generator CLI as a gradle plugin.
+This plugin supports common functionality found in OpenAPI Generator CLI as a Gradle plugin.
 
 This gives you the ability to generate client SDKs, documentation, new generators, and to validate Open API 2.0 and 3.x
 specifications as part of your build. Other tasks are available as command line tasks.
 """
-ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
 
-apply plugin: 'com.gradle.plugin-publish'
-apply plugin: 'java-gradle-plugin'
-apply plugin: 'signing'
-apply plugin: 'kotlin'
-apply plugin: "org.gradle.kotlin.kotlin-dsl"
-apply plugin: 'io.codearte.nexus-staging'
-apply plugin: "de.marcphilipp.nexus-publish"
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+java {
+    withSourcesJar()
+    withJavadocJar()
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+}
 
 repositories {
-    mavenLocal()
-    maven { url "https://repo1.maven.org/maven2" }
+    mavenCentral()
     maven {
-        url "https://oss.sonatype.org/content/repositories/releases/"
-    }
-    maven {
+        name = "Sonatype Snapshots"
         url "https://oss.sonatype.org/content/repositories/snapshots/"
     }
-    jcenter()
 }
 
 dependencies {
-    compile gradleApi()
-    // Shared OpenAPI Generator version be passed via command line arg as -PopenApiGeneratorVersion=VERSION
-    compile "org.openapitools:openapi-generator:$openApiGeneratorVersion"
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-
-    testCompile 'org.testng:testng:6.9.6',
-            "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
-
-    testCompile "org.jetbrains.kotlin:kotlin-compiler-embeddable:$kotlin_version"
+    implementation("org.openapitools:openapi-generator:$openApiGeneratorVersion")
+    testImplementation("org.jetbrains.kotlin:kotlin-test-testng:1.6.21")
 }
 
-test {
+tasks.named("test").configure {
     useTestNG()
-    testClassesDirs = files(project.tasks.compileTestKotlin.destinationDir)
     testLogging.showStandardStreams = false
+    failFast = true
 
     beforeTest { descriptor ->
         logger.lifecycle("Running test: " + descriptor)
     }
-
-    failFast = true
 
     onOutput { descriptor, event ->
         // SLF4J may complain about multiple bindings depending on how this is run.
@@ -88,133 +60,107 @@ test {
     }
 }
 
-task javadocJar(type: Jar) {
-    from javadoc
-    classifier = 'javadoc'
-}
-
-task sourcesJar(type: Jar) {
-    from sourceSets.main.allSource
-    classifier = 'sources'
-}
-
-artifacts {
-    archives javadocJar, sourcesJar
-}
-
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
-            artifact sourcesJar
-            artifact javadocJar
-            pom {
-                name = 'OpenAPI-Generator Contributors'
-                description = project.description
-                url = 'https://openapi-generator.tech'
-                organization {
-                    name = 'org.openapitools'
-                    url = 'https://github.com/OpenAPITools'
-                }
-                licenses {
-                    license {
-                        name = "The Apache Software License, Version 2.0"
-                        url = "https://www.apache.org/licenses/LICENSE-2.0.txt"
-                        distribution = "repo"
-                    }
-                }
-                developers {
-                    developer {
-                        id = "openapitools"
-                        name = "OpenAPI-Generator Contributors"
-                        email = "team@openapitools.org"
-                    }
-                }
-                scm {
-                    url = 'https://github.com/OpenAPITools/openapi-generator'
-                    connection = 'scm:git:git://github.com/OpenAPITools/openapi-generator.git'
-                    developerConnection = 'scm:git:ssh://git@github.com:OpenAPITools/openapi-generator.git'
-                }
-                issueManagement {
-                    system = 'GitHub'
-                    url = 'https://github.com/OpenAPITools/openapi-generator/issues'
-                }
-            }
-        }
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
 
-nexusStaging {
-    username = project.properties["ossrhUsername"]
-    password = project.properties["ossrhPassword"]
+tasks.withType(Javadoc).configureEach {
+    if (JavaVersion.current().isJava9Compatible()) {
+        options.addBooleanOption("html5", true)
+    }
 }
 
-nexusPublishing {
-    // To retrieve: ./gradlew -Psigning.keyId="$SIGNING_KEY" -Psigning.password="$SIGNING_PASSPHRASE" -Psigning.secretKeyRingFile="$SIGNING_SECRET" getStagingProfile --no-daemon
-    stagingProfileId = "456297f829bbbe"
+tasks.withType(CloseNexusStagingRepository).configureEach {
+    onlyIf { nexusPublishing.useStaging.get() }
+}
+
+tasks.withType(ReleaseNexusStagingRepository).configureEach {
+    onlyIf { nexusPublishing.useStaging.get() }
 }
 
 gradlePlugin {
     plugins {
         openApiGenerator {
-            id = 'org.openapi.generator'
-            implementationClass = 'org.openapitools.generator.gradle.plugin.OpenApiGeneratorPlugin'
+            id = "org.openapi.generator"
+            displayName = "OpenAPI Generator Gradle Plugin"
+            implementationClass = "org.openapitools.generator.gradle.plugin.OpenApiGeneratorPlugin"
+            description = "OpenAPI Generator allows generation of API client libraries (SDK generation), server stubs, documentation and configuration automatically given an OpenAPI Spec (v2, v3)."
         }
     }
 }
 
 pluginBundle {
-    // These settings are set for the whole plugin bundle
-    website = 'https://openapi-generator.tech/'
-    vcsUrl = 'https://github.com/OpenAPITools/openapi-generator'
-    description = 'OpenAPI Generator allows generation of API client libraries (SDK generation), server stubs, documentation and configuration automatically given an OpenAPI Spec (v2, v3)'
+    website = "https://openapi-generator.tech/"
+    vcsUrl = "https://github.com/OpenAPITools/openapi-generator"
+    tags = ["openapi-3.0", "openapi-2.0", "openapi", "swagger", "codegen", "sdk"]
+}
 
-    plugins {
-        // first plugin
-        openApiGenerator {
-            id = 'org.openapi.generator'
-            displayName = 'OpenAPI Generator Gradle Plugin'
-            tags = ['openapi-3.0', 'openapi-2.0', 'openapi', 'swagger', 'codegen', 'sdk']
-            version = "$openApiGeneratorVersion"
-            group = "org.openapitools"
+nexusPublishing {
+    repositories {
+        sonatype {
+            username = project.properties["ossrhUsername"]
+            password = project.properties["ossrhPassword"]
+
+            // To retrieve: ./gradlew -Psigning.keyId="$SIGNING_KEY" -Psigning.password="$SIGNING_PASSPHRASE" -Psigning.secretKeyRingFile="$SIGNING_SECRET" getStagingProfile --no-daemon
+            stagingProfileId = "456297f829bbbe"
         }
     }
 }
 
-// signing will require three keys to be defined: signing.keyId, signing.password, and signing.secretKeyRingFile.
-// These can be passed to the gradle command:
+// Signing requires three keys to be defined: signing.keyId, signing.password, and signing.secretKeyRingFile.
+// These can be passed to the Gradle command:
 //     ./gradlew -Psigning.keyId=yourid
 // or stored as key=value pairs in ~/.gradle/gradle.properties
 // You can also apply them in CI via environment variables. See Gradle's docs for details.
 signing {
-    required { isReleaseVersion && (gradle.taskGraph.hasTask("publishPluginMavenPublicationToNexusRepository") ) }
-    sign publishing.publications.mavenJava
+    required { isReleaseVersion && gradle.taskGraph.hasTask("publishPluginMavenPublicationToSonatypeRepository") }
+    sign(publishing.publications)
 }
 
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
 
-javadoc {
-    if(JavaVersion.current().isJava9Compatible()) {
-        options.addBooleanOption('html5', true)
+afterEvaluate {
+    tasks.named("publishToSonatype").configure {
+        dependsOn("check")
+    }
+
+    publishing {
+        publications {
+            pluginMaven {
+                pom {
+                    name = "OpenAPI-Generator Contributors"
+                    description = project.description
+                    url = "https://openapi-generator.tech"
+                    organization {
+                        name = "org.openapitools"
+                        url = "https://github.com/OpenAPITools"
+                    }
+                    licenses {
+                        license {
+                            name = "The Apache Software License, Version 2.0"
+                            url = "https://www.apache.org/licenses/LICENSE-2.0.txt"
+                            distribution = "repo"
+                        }
+                    }
+                    developers {
+                        developer {
+                            id = "openapitools"
+                            name = "OpenAPI-Generator Contributors"
+                            email = "team@openapitools.org"
+                        }
+                    }
+                    scm {
+                        url = "https://github.com/OpenAPITools/openapi-generator"
+                        connection = "scm:git:git://github.com/OpenAPITools/openapi-generator.git"
+                        developerConnection = "scm:git:ssh://git@github.com:OpenAPITools/openapi-generator.git"
+                    }
+                    issueManagement {
+                        system = "GitHub"
+                        url = "https://github.com/OpenAPITools/openapi-generator/issues"
+                    }
+                }
+            }
+        }
     }
 }
-
-tasks {
-    closeRepository {
-        onlyIf { nexusPublishing.useStaging.get() }
-    }
-    releaseRepository{
-        onlyIf { nexusPublishing.useStaging.get() }
-    }
-}
-
-publishToNexus.dependsOn 'check'
