Remove repeated words

--- a/modules/openapi-generator/src/test/resources/3_0/helidon/petstore-for-testing.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/helidon/petstore-for-testing.yaml
@@ -341,7 +341,7 @@ paths:
           multipart/form-data:
             schema:
               $ref: '#/components/schemas/PetsForm'
-        description: Object that that contains info about pets
+        description: Object that contains info about pets
         required: true
       responses:
         '200':
