Build several subprojects with Gradle 7.5.1

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,6 @@ signing.keyId=unset
 signing.password=unset
 # signing.secretKeyRingFile=unset
 # END placeholders
+
+org.gradle.parallel=true
+org.gradle.caching=true
