--- a/.gitignore
+++ b/.gitignore
@@ -84,7 +84,8 @@ samples/client/petstore/cpp-restsdk/Makefile
 samples/client/petstore/cpp-restsdk/cmake_install.cmake
 
 #Java/Android
-**/.gradle
+.gradle
+build
 samples/client/petstore/java/hello.txt
 samples/client/petstore/java/okhttp-gson/hello.txt
 samples/client/petstore/java/jersey1/hello.txt
