--- a/.github/workflows/gradle-plugin-tests.yaml
+++ b/.github/workflows/gradle-plugin-tests.yaml
@@ -1,12 +1,6 @@
 name: Gradle plugin tests
 
-on:
-  push:
-    paths:
-      - modules/openapi-generator-gradle-plugin/**
-  pull_request:
-    paths:
-      - modules/openapi-generator-gradle-plugin/**
+on: [ push, pull_request ]
 
 jobs:
   test:
@@ -14,30 +8,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 11
+      - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
-          java-version: 11
-          distribution: 'temurin'
-      - name: Cache maven dependencies
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-maven-repository
-        with:
-          path: |
-            ~/.m2/repository
-            ~/.gradle
-            !~/.gradle/caches/modules-2/modules-2.lock
-            !~/.gradle/caches/*/plugin-resolution/
-            !~/.m2/repository/org/openapitools/
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-test-gradle-plugin-${{ env.cache-name }}-
-            ${{ runner.os }}-test-gradle-plugin-
+          java-version: 8
+          distribution: temurin
       - name: Run tests
-        run: |
-          mvn --no-snapshot-updates --batch-mode --quiet install -DskipTests -Dorg.slf4j.simpleLogger.defaultLogLevel=error
-          (cd modules/openapi-generator-gradle-plugin/samples/local-spec && ./gradlew buildGoSdk) # using gradle-6.8.3 via wrapper
-          (cd modules/openapi-generator-gradle-plugin/samples/local-spec && ./gradlew openApiGenerate)
-          (cd modules/openapi-generator-gradle-plugin/samples/local-spec && ./gradlew buildDotnetSdk)
-          (cd modules/openapi-generator-gradle-plugin/samples/local-spec && gradle buildJavaResttemplateSdk) # not using gradle wrapper
+        working-directory: modules/openapi-generator-gradle-plugin/samples/local-spec
+        run:
+          ./gradlew buildGoSdk
+          ./gradlew openApiGenerate
+          ./gradlew buildDotnetSdk
+          ./gradlew buildJavaRestTemplateSdk
