Fix required property in test resource

--- a/modules/openapi-generator/src/test/resources/3_0/oneOfDiscriminator.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/oneOfDiscriminator.yaml
@@ -178,7 +178,8 @@ components:
       properties:
         fruitType:
           $ref: "#/components/schemas/FruitTypeEnum"
-      required: fruitType
+      required:
+        - fruitType
       oneOf:
         - $ref: '#/components/schemas/AppleOneOfEnumMappingDisc'
         - $ref: '#/components/schemas/BananaOneOfEnumMappingDisc'
