Add example of enum mapping to samples

--- a/modules/openapi-generator/src/test/resources/3_0/oneof_polymorphism_and_inheritance.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/oneof_polymorphism_and_inheritance.yaml
@@ -105,6 +105,24 @@ components:
         - $ref: "#/components/schemas/FooRef"
       discriminator:
         propertyName: "@type"
+    RefOrValueEnum:
+      type: string
+      enum: [REF, VALUE]
+    FooRefOrValueEnumMapping:
+      type: object
+      properties:
+        objectType:
+          $ref: "#/components/schemas/RefOrValueEnum"
+      required:
+        - objectType
+      oneOf:
+        - $ref: "#/components/schemas/Foo"
+        - $ref: "#/components/schemas/FooRef"
+      discriminator:
+        propertyName: "objectType"
+        mapping:
+          VALUE: "#/components/schemas/Foo"
+          REF: "#/components/schemas/FooRef"
     Foo:
       type: object
       properties:
