--- a/modules/openapi-generator/src/test/resources/3_0/python/petstore-with-fake-endpoints-models-for-testing-with-http-signature.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/python/petstore-with-fake-endpoints-models-for-testing-with-http-signature.yaml
@@ -2032,6 +2032,13 @@ components:
         - (xyz)
         - COUNT_1M
         - COUNT_50M
+    ObjectModelWithArgAndArgsProperties:
+      type: object
+      additionalProperties:
+        type: string
+      required:
+      - arg
+      - args
     Enum_Test:
       type: object
       required:
