Use arg and args as defined properties

--- a/modules/openapi-generator/src/test/resources/3_0/python/petstore-with-fake-endpoints-models-for-testing-with-http-signature.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/python/petstore-with-fake-endpoints-models-for-testing-with-http-signature.yaml
@@ -2034,8 +2034,11 @@ components:
         - COUNT_50M
     ObjectModelWithArgAndArgsProperties:
       type: object
-      additionalProperties:
-        type: string
+      properties:
+        arg:
+          type: string
+        args:
+          type: string
       required:
       - arg
       - args
