fix enum serializatio/deserialization

--- a/modules/openapi-generator/src/test/resources/3_0/python/petstore-with-fake-endpoints-models-for-testing.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/python/petstore-with-fake-endpoints-models-for-testing.yaml
@@ -1904,6 +1904,8 @@ components:
       required:
         - value
       properties:
+        str_value:
+          $ref: '#/components/schemas/OuterEnum'
         value:
           $ref: '#/components/schemas/OuterEnumInteger'
     DeprecatedObject:
