--- a/.github/workflows/samples-rust.yaml
+++ b/.github/workflows/samples-rust.yaml
@@ -35,8 +35,6 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-      - uses: actions-rs/cargo@v1
+      - name: Build
         working-directory: ${{ matrix.sample }}
-        with:
-          command: build
-          args: --release --all-features
+        run: cargo build
