fix regular expression warning, add special_name test, whitelist schema

--- a/modules/openapi-generator/src/test/resources/3_0/python/petstore-with-fake-endpoints-models-for-testing.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/python/petstore-with-fake-endpoints-models-for-testing.yaml
@@ -1413,6 +1413,21 @@ components:
             - sold
       xml:
         name: Pet
+    special_name:
+      type: object
+      properties:
+        property:
+          type: integer
+          format: int64
+        async:
+          $ref: '#/components/schemas/Category'
+        schema:
+          type: string
+          description: pet status in the store
+          enum:
+            - available
+            - pending
+            - sold
     ApiResponse:
       type: object
       properties:
