--- a/modules/openapi-generator/src/test/resources/3_0/python/petstore-with-fake-endpoints-models-for-testing.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/python/petstore-with-fake-endpoints-models-for-testing.yaml
@@ -30,24 +30,6 @@ paths:
                   string:
                     $ref: '#/components/schemas/Foo'
   /pet:
-    servers:
-    - url: 'http://petstore.swagger.io/v2'
-    - url: 'http://path-server-test.petstore.local/v2'
-    - url: 'http://{server}.swagger.io:{port}/v2'
-      description: test server with variables
-      variables:
-        server:
-          description: target server
-          enum:
-            - 'petstore'
-            - 'qa-petstore'
-            - 'dev-petstore'
-          default: 'petstore'
-        port:
-          enum:
-            - 80
-            - 8080
-          default: 80
     post:
       tags:
         - pet
@@ -60,6 +42,7 @@ paths:
         '405':
           description: Invalid input
       security:
+        - http_signature_test: []
         - petstore_auth:
             - 'write:pets'
             - 'read:pets'
@@ -82,6 +65,7 @@ paths:
         '405':
           description: Validation exception
       security:
+        - http_signature_test: []
         - petstore_auth:
             - 'write:pets'
             - 'read:pets'
@@ -129,6 +113,7 @@ paths:
         '400':
           description: Invalid status value
       security:
+        - http_signature_test: []
         - petstore_auth:
             - 'write:pets'
             - 'read:pets'
@@ -173,6 +158,7 @@ paths:
         '400':
           description: Invalid tag value
       security:
+        - http_signature_test: []
         - petstore_auth:
             - 'write:pets'
             - 'read:pets'
@@ -410,6 +396,24 @@ paths:
         '404':
           description: Order not found
   /user:
+    servers:
+    - url: 'http://petstore.swagger.io/v2'
+    - url: 'http://path-server-test.petstore.local/v2'
+    - url: 'http://{server}.swagger.io:{port}/v2'
+      description: test server with variables
+      variables:
+        server:
+          description: target server
+          enum:
+            - 'petstore'
+            - 'qa-petstore'
+            - 'dev-petstore'
+          default: 'petstore'
+        port:
+          enum:
+            - 80
+            - 8080
+          default: 80
     post:
       tags:
         - user
@@ -1288,6 +1292,9 @@ components:
       scheme: bearer
       bearerFormat: JWT
     http_signature_test:
+      # Test the 'HTTP signature' security scheme.
+      # Each HTTP request is cryptographically signed as specified
+      # in https://datatracker.ietf.org/doc/draft-cavage-http-signatures/
       type: http
       scheme: signature
   schemas:
