--- a/samples/openapi3/client/petstore/python-nextgen-aiohttp/pom.xml
+++ b/samples/openapi3/client/petstore/python-nextgen-aiohttp/pom.xml
@@ -1,7 +1,7 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.openapitools</groupId>
-    <artifactId>PythonNextgenPetstoreTests</artifactId>
+    <artifactId>PythonNextgenAioHttpPetstoreTests</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>Python OpenAPI3 Petstore Client</name>
@@ -33,9 +33,9 @@
                             <goal>exec</goal>
                         </goals>
                         <configuration>
-                            <executable>make</executable>
+                            <executable>bash</executable>
                             <arguments>
-                                <argument>test-all</argument>
+                                <argument>test_python3.sh</argument>
                             </arguments>
                         </configuration>
                     </execution>
